--- a/app/config.json
+++ b/app/config.json
@@ -7,5 +7,7 @@
   "os:blackberry": {},
   "os:ios": {},
   "os:mobileweb": {},
-  "dependencies": {}
+  "dependencies": {
+    "com.mp5systems.rippleeffect": "1.1.0"
+  }
 }
